@@ -1,3 +1,7 @@
+2013-01-29  James Hunt  <james.hunt@ubuntu.com>
+
+	* init/control.c: More careful uid checking.
+
 2013-01-25  James Hunt  <james.hunt@ubuntu.com>
 
 	* init/control.c:
